[package]
name = "json-patch"
version = "3.0.0"
authors = ["vovacooper <vovacooper@gmail.com>"]
categories = []
keywords = ["json", "json-patch"]
description = "RFC 6902, JavaScript Object Notation (JSON) Patch with some modifications"
repository = "https://github.com/KONTRUSTMEDIA/json-patch"
readme = "README.md"
edition = "2021"

[features]
default = ["diff"]
diff = []

[dependencies]
jsonptr = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
thiserror = "*"
utoipa = { version = "*", optional = true }

[dev-dependencies]
expectorate = "*"
rand = "*"
serde_json = { version = "*", features = ["preserve_order"] }
serde_yaml = "*"
utoipa = { version = "*", features = ["debug"] }
