[package]
name = "json-patch"
version = "3.0.0"
authors = ["vovacooper <vovacooper@gmail.com>"]
categories = []
keywords = ["json", "json-patch"]
description = "RFC 6902, JavaScript Object Notation (JSON) Patch with some modifications"
repository = "https://github.com/KONTRUSTMEDIA/json-patch"
readme = "README.md"
edition = "2021"

[features]
default = ["diff"]
diff = []

[dependencies]
jsonptr = "*"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "*"
thiserror = "*"
utoipa = { version = "4.0", optional = true }

[dev-dependencies]
expectorate = "*"
rand = "*"
serde_json = { version = "1.0.95", features = ["preserve_order"] }
serde_yaml = "*"
utoipa = { version = "4.0", features = ["debug"] }
