[package]
name = "json-patch"
version = "2.0.0"
authors = ["Ivan Dubrov <dubrov.ivan@gmail.com>"]
categories = []
keywords = ["json", "json-patch"]
description = "RFC 6902, JavaScript Object Notation (JSON) Patch"
repository = "https://github.com/idubrov/json-patch"
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2021"

[features]
default = ["diff"]
diff = []

[dependencies]
# jsonptr = "*"
jsonptr = "0.4.7"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
thiserror = "*"
utoipa = { version = "*", optional = true }

[dev-dependencies]
expectorate = "*"
rand = "*"
serde_json = { version = "*", features = ["preserve_order"] }
serde_yaml = "*"
utoipa = { version = "*", features = ["debug"] }
